--- a/package.json
+++ b/package.json
@@ -9,10 +9,18 @@
     "body-parser": "^1.19.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-config-prettier": "^6.6.0",
+    "eslint-plugin-flowtype": "^4.4.1",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-prettier": "^3.1.1",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
     "mysql": "^2.17.1",
-    "pug": "2.0.0-beta11"
+    "pug": "^2.0.4"
+  },
+  "devDependencies": {
+    "eslint": "^6.6.0"
   }
 }
